[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iwl"
version = "0.0.1"
authors = [
    { name = "Benjamin Siebke, Daniel Siebke" },
]
description = "A package that converts a yaml-based web language to html."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
"Homepage" = "https://github.com/DevelopmentLounge/IWL"
"Bug Tracker" = "https://github.com/DevelopmentLounge/IWL/issues"